<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/total"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buybtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/productType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_type"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />


    <Button
        android:id="@+id/managerbtn"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:onClick="managerBtnClicked"
        android:text="@string/manager"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buybtn"
        android:layout_width="90dp"
        android:layout_height="170dp"
        android:onClick="buyBtnClicked"
        android:text="@string/buy"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/tableLayout" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5">


        <TableRow
            android:id="@+id/fsRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn1"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn2"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn3"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/sRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn4"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn5"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn6"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn7"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn8"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn9"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/fRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/delbtn"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>