<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/pants"
        android:textColor="@color/black"
        android:includeFontPadding="false"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/_10"
        android:textSize="20sp"
        android:textColor="@color/DarkGray"
        android:layout_toEndOf="@+id/name"/>


    <TextView
        android:id="@+id/qty"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="-13dp"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/_20_44"
        android:textColor="@color/DarkGray"
        android:textSize="20sp" />

</RelativeLayout>